# g4y

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json
assets/shader/: g4y.fs  g4y.vs
cmake/: FindSDL2.cmake  Findassimp.cmake  Findblueprint-utilities.cmake  Findbullet.cmake  Findglew.cmake  Findglm.cmake  Findimgui.cmake  Findimgui_node_editor.cmake  Findpython3.cmake  G4YBuildHelpers.cmake  G4YBuildSet.cmake  G4YConfigDefine.cmake  G4YConfigDepend.cmake  ProjBuildSet.cmake  ProjConfigDepend.cmake
doc/: FAQ.md
examples/: BulletScript.h  CMakeLists.txt  CameraScript.h  CameraScripts.h  MoveScript.h  MoveScripts.h  README.md  RoamScript.h  ShowImGuiDemo.h
examples/bullet_test/: CMakeLists.txt  bullet_test.cpp
examples/cs_test/: CMakeLists.txt  Client.cpp  Server.cpp  TClient.cpp  TServer.cpp
examples/editor/: CMakeLists.txt  Panel.cpp  Panel.h  PanelMgr.cpp  PanelMgr.h  main.cpp
examples/g4y_test/: CMakeLists.txt  g4y_test.cpp
examples/gfy_test/: CMakeLists.txt  gfy_test.cpp
examples/gmodel_test/: CMakeLists.txt  model_test.cpp
examples/gui_test/: CMakeLists.txt  gui_test.cpp
examples/minecraft/: Block.hpp  CMakeLists.txt  Player.hpp  main.cpp
examples/pyg4y_test/: demo.py
examples/snake/: CMakeLists.txt  README.md  snake.cpp
examples/test/: CMakeLists.txt  main.cpp
g4y/: CMakeLists.txt  G4Y.cpp  G4Y.h  GCom.cpp  GCom.h  GCommon.h  GConfig.hpp  GDynamicsWorld.cpp  GDynamicsWorld.h  GLog.cpp  GLog.h  GObj.cpp  GObj.h  GOpenGLView.cpp  GOpenGLView.h  GPhyWorld.cpp  GPhyWorld.h  GResourceMgr.cpp  GResourceMgr.h  GScene.cpp  GScene.h  GSettings.cpp  GSettings.h  GShader.cpp  GShader.h  GWorld.cpp  GWorld.h
g4y/gcom/: CMakeLists.txt
g4y/gcom/camera/: CMakeLists.txt  GCamera.cpp  GCamera.h
g4y/gcom/graphics/: CMakeLists.txt  GMaterial.hpp  GMesh.hpp  GMeshRenderer.hpp  GShader.cpp  GShader.hpp  GTexture.cpp
g4y/gcom/physics/: CMakeLists.txt  GBoxCollider.cpp  GBoxCollider.h  GCollider.cpp  GCollider.h  GMeshCollider.cpp  GPhysics.cpp  GPhysics.hpp  GRigibody.cpp  GRigibody.h
g4y/gcom/shape/: CMakeLists.txt  GAxis.h  GCube.h  GGrid.cpp  GGrid.h  GSkybox.h
g4y/gcom/transform/: CMakeLists.txt  GTransform.cpp  GTransform.h
gcom/: GTransform.h
gcom/camera/: GCamera.cpp  GCamera.h
gcom/graphics/: GMaterial.cpp  GMesh.cpp  GMesh.hpp  GMeshRenderer.cpp  GMeshRenderer.hpp  GShader.cpp  GTexture.cpp  GTexture.hpp
gcom/light/: GLight.cpp  GLight.h
gcom/model/: CMakeLists.txt  GMesh.cpp  GMesh.h  GModel.cpp  GModel.h  GShader.cpp  GShader.h
gcom/msg/: GCliMsg.h  GCliMsgMgr.cpp  GCliMsgMgr.h  GCliMsgProxy.cpp  GCliMsgProxy.h  GClientProxy.cpp  GClientProxy.h  GMsg.cpp  GMsg.h  GMsgFmt.h  GMsgManager.h  GMsgMgr.cpp  GMsgMgr.h  GMsgNetIO.cpp  GMsgNetIO.h  GPbCliMsgMgr.cpp  GPbCliMsgMgr.h  GPbCliTransformMsg.h  GPbMsgFmt.h  GPbTransformMsg.cpp  GPbTransformMsg.h  GProtoBufMsg.cpp  GProtoBufMsg.h  GSrvMsgMgr.cpp  GSrvMsgMgr.h  g4y.proto
gcom/msg/msgio/: GBoostMsgQueue.cpp  GBoostMsgQueue.h  GMsgIO.h
gcom/physics/: GBoxCollider.cpp  GBoxCollider.h  GCollider.cpp  GCollider.h  GGround.cpp  GGround.h  GMeshCollider.cpp  GMeshCollider.h  GRigibody.cpp  GRigibody.h  GSphere.cpp  GSphere.h  GSphereCollider.cpp  GSphereCollider.h
gcom/shape/: GAxis.cpp  GAxis.h  GCube.cpp  GCube.h  GGrid.cpp  GGrid.h  GSkybox.cpp  GSkybox.h
gcom/transform/: GTransform.cpp  GTransform.h
gfy/: GCom.cpp  GCom.h  GObj.cpp  GObj.h  GScene.cpp  GScene.h  GWorld.cpp  GWorld.h
pyg4y/: CMakeLists.txt  pyg4y.cpp
tanksoul/: CMakeLists.txt  main.cpp
templates/: CMakeLists.txt  main.cpp
